@@ -11,17 +11,17 @@
  --scrollbar-thumb-color:#5f5f5f;
  --scrollbar-track-color:#3f3f3f;
  --scrollbar-corner-color:#333;
- --background-color:#424242;
+ --background-color:#323232;
  --background-shadow-color:rgba(72, 72, 72, 0.9);
  --dialog-toolbar-color:#212121;
  --bottom-toolbar-color:#212121;
  --top-toolbar-color:#212121;
- --sub-toolbar-color:#3f3f3f;
+ --sub-toolbar-color:#313131;
  --bottom-toolbar-border-color:#212121;
  --top-toolbar-border-color:#212121;
  --sub-toolbar-border-color:#333;
  --dialog-toolbar-border-color:#212121;
- --splitter-color:#333;
+ --splitter-color:var(--sub-toolbar-color);
  --icon-color:#fff;
  --dlg-icon-color:#fff;
  --list-item-border-color:#5c5c5c;
